bump core dependencies